fixing the table up.  Temp css to adjust width properly and align cols nicely.  Also added col to show top % as that looks nice.

--- a/css/home.css
+++ b/css/home.css
@@ -684,3 +684,20 @@ a, a:visited, a:hover, a:active {
 
 
 }
+
+
+
+/* Table Fix */
+table {
+    width:100%;
+}
+th {
+    text-align:center;
+}
+
+td {
+    text-align:center;
+    width:20%; 
+}
+
+
